--- a/Quiz App Proper/CSS/htmlquiz.css
+++ b/Quiz App Proper/CSS/htmlquiz.css
@@ -104,4 +104,33 @@ body {
     border: none;
 }
 
+.result{
+    /* display: none;
+    opacity: 0; */
+    border: 2px solid #FFE194;
+    border-radius: 10px;
+    background: #2196f3;
+    width: 40%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+
+}
+
+.resultLine {
+    font-size: 28px;
+    text-align: center;
+    color: white;
+}
+
+.heading {
+    font-size: 36px;
+    /* text-align: center; */
+    color: white;
+    border-bottom: 2px solid #FFE194;
+}
+
 
